[project]
name = "jarvis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "sccuhha" }
]
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.15.0",
    "ollama>=0.4.8",
    "openai>=1.78.1",
    "pyyaml>=6.0.2",
]

[project.scripts]
jarvis = "jarvis:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
