[project]
name = "jarvis"
version = "0.2"
description = "jarvis, a cli llm client"
readme = "README.md"
authors = [
    { name = "sccuhha" }
]
requires-python = ">=3.12"
dependencies = [
    "litellm>=1.70.0",
    "pyyaml>=6.0.2",
]

[project.scripts]
jarvis = "jarvis:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
